[package]
name = "uniswap-v2-library-tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.2.0", features = ["test-support"] }
casper-types = "1.5.0"
casperlabs-test-env = "0.2.0"
casperlabs-contract-utils = "0.1.4"
hex = "0.4.3"
blake2 = "0.9.1"
renvm-sig = "0.1.1"
cryptoxide = "0.3.3"
more-asserts = "0.2.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]