[package]
name = "uniswap-v2-library"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
uniswap-v2-library-crate = { path = "../uniswap-v2-library-crate" }

[[bin]]
name = "uniswap-v2-library"
path = "bin/uniswap.rs"
bench = false
doctest = false
test = false