[package]
name = "uniswap-v2-router"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "=1.4.3"
casper-types = "=1.4.6"
contract-utils = { path = "../utils/contract-utils" }
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1 "

[[bin]]
name = "uniswap-v2-router"
path = "bin/uniswap.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
