[package]
name = "uniswap_v2_library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
contract-utils = { path = "../utils/contract-utils" }
renvm-sig = "0.1.1"
hex = "0.4.3"

[[bin]]
name = "uniswap-v2-library"
path = "bin/uniswap.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

[profile.release]
lto = true
