[package]
name = "uniswap_v2_router_tests"
version = "0.2.1"
authors = ["Muzahir Hussain <muzahir.hussain@scytalelabs.com>", "Bassam Munib <bassam.munib@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
casper-engine-test-support = "1.3.2"
test-env = { path = "../utils/test-env" }
contract-utils = { path = "../utils/contract-utils" }
hex = "0.4.3"
blake2 = "0.9.1"
rand = "0.8.4"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

