[package]
name = "uniswap_v2_library_tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-engine-test-support = "1.3.2"
casper-contract = "1.3.2"
casper-types = "1.3.2"
test-env = { path = "../utils/test-env" }
contract-utils = { path = "../utils/contract-utils" }
blake2 = "0.9.1"
hex = "0.4.3"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

[profile.release]
lto = true